CAMEL-20524: Fix compile on java 17